first implementation of global search implemented. Still missing better styling.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script type="module">
 		import '@roenlie/mirage-docs/dist/app/components/layout.cmp.js';
 	</script>
+
+	<script type="module" src="./docs/layoutBootstrap.ts"></script>
 </head>
 
 <body>
