updating to use new aegis imports and adding a debounce to hmr.

--- a/packages/doc-site/index.html
+++ b/packages/doc-site/index.html
@@ -6,6 +6,8 @@
 	<title>Mirage Docs</title>
 
 	<link rel="icon" type="image/svg+xml" href="/logo.svg" />
+
+	<script type="module" src="./bootstrap-root.ts"></script>
 </head>
 
 <body>
